Some code cleanup
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1393570 13f79535-47bb-0310-9956-ffa450edef68